[gd_scene load_steps=4 format=3 uid="uid://onigrg5enq16"]

[ext_resource type="Script" uid="uid://cj83jdhs5bbhc" path="res://scripts/door.gd" id="1_vgso6"]
[ext_resource type="Texture2D" uid="uid://b7mmq2xmb27k7" path="res://assets/Ninja Adventure - Asset Pack/Ui/Input/Keyboard/KeyE.png" id="2_go5ye"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35hlq"]
size = Vector2(45, 41.5)

[node name="Door" type="Node2D"]
position = Vector2(204, 57)
script = ExtResource("1_vgso6")

[node name="entrancedetection" type="Area2D" parent="."]
position = Vector2(1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="entrancedetection"]
shape = SubResource("RectangleShape2D_35hlq")

[node name="InteractionPrompt" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -15)
texture = ExtResource("2_go5ye")

[node name="Spawn" type="Marker2D" parent="."]

[connection signal="body_entered" from="entrancedetection" to="." method="_on_body_entered"]
[connection signal="body_exited" from="entrancedetection" to="." method="_on_body_exited"]
